update azure deployment plan